dataset1235/2025-2/1955397009/users/4276496853/executions/3239899347_874045616.log
== RUN (2025-08-28 12:51:27)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round("peso_racao" "qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:00:01)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 4,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
20000.0
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6289.0
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5572.0
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
80000.0
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2207.0
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1335.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:49:10)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round("peso_racao_qnt_diaria * 5,2)")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
File "XXXX", line 3
    print(round("peso_racao_qnt_diaria * 5,2)")
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:46:31)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print("round"("peso_racao_qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
XXXX:3: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print("round"("peso_racao_qnt_diaria" * 5,2))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("round"("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:47:19)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print("round(peso_racao_qnt_diaria * 5,2"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
File "XXXX", line 3
    print("round(peso_racao_qnt_diaria * 5,2"))
                                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:48:49)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print("round(peso_racao_qnt_diaria * 5,2)")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:54:45)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
-0.22
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6269.44
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5547.03
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
49999.78
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2187.48
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1318.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:45:36)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round ("peso_racao_qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round ("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:54:12)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 5.2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
-4000
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6266
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5542
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
44000
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2184
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1315
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:44:49)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round("peso_racao_qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao_qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:42:17)
-- CODE: 
peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
qtd_diaria = float (input)("Iforme o valor da quantidade diaria:"))
print(round(peso_racao_qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
File "XXXX", line 1
    peso_racao = float (input)("Iforme o valor da saca de racao em gramas:"))
                                                                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 13:00:51)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 4,0))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
20000.0
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6289.0
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5572.0
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
80000.0
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2207.0
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1335.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:52:49)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:52:45)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao - qnt_diaria * 5,2))
                             ^^^^^^^^^^
NameError: name 'qnt_diaria' is not defined. Did you mean: 'qtd_diaria'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:49:48)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao_qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:51:33)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round("peso_racao" "qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round("peso_racao" "qnt_diaria" * 5,2))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type str doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:53:33)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 5,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
-0.22
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6269.44
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5547.03
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
49999.78
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2187.48
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1318.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:52:04)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:43:26)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao_qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:58:19)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 4,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
20000.0
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6289.0
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5572.0
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
80000.0
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2207.0
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1335.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:59:29)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 3,8))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
40000.0033
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6308.56
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5596.31
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
110000.0033
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2226.98
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1352.36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:43:06)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao_qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:53:22)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
-0.22
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6269.44
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5547.03
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
49999.78
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2187.48
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1318.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:59:58)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao - qtd_diaria * 4,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
20000.0
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
6289.0
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
5572.0
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
80000.0
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
2207.0
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
1335.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:44:14)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao_qnt_diaria * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(peso_racao_qnt_diaria * 5,2))
                ^^^^^^^^^^^^^^^^^^^^^
NameError: name 'peso_racao_qnt_diaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:46:46)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print(round(peso_racao_qnt_diaria" * 5,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
-- ERROR:
File "XXXX", line 3
    print(round(peso_racao_qnt_diaria" * 5,2))
                                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:48:22)
-- CODE: 
peso_racao = float (input())
qtd_diaria = float (input())
print("round(peso_racao_qnt_diaria * 5,2)")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100000.3333
20000.11
---- correct output:
19999.89
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 2:
---- input:
6367.24
19.56
---- correct output:
6289.0
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 3:
---- input:
5670.23
24.64
---- correct output:
5571.67
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 4:
---- input:
200000.3333
30000.11
---- correct output:
79999.89
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 5:
---- input:
2286.23
19.75
---- correct output:
2207.23
---- user output:
round(peso_racao_qnt_diaria * 5,2)
-- TEST CASE 6:
---- input:
1403.30
16.98
---- correct output:
1335.38
---- user output:
round(peso_racao_qnt_diaria * 5,2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
